--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 [
 {
-"pic":"lib/images/p103.png",
+"pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
@@ -8,7 +8,7 @@
 "w1":"lib/images/wwindy.png",
 "hcp":"CP 2055 - 2153",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹-阿羅拉","bu11":"lib/images/p646.png","bu12":"酋雷姆(Black)","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
 "pic":"lib/images/p126.png",
@@ -19,7 +19,7 @@
 "w1":"",
 "hcp":"CP 1623 - 1710",
 "sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"鴨嘴火獸","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲(Therian)","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
 },
 {
 "pic":"lib/images/p156.png",
@@ -30,7 +30,7 @@
 "w1":"",
 "hcp":"CP 1109 - 1180",
 "sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"火岩鼠","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲(Therian)","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
 },
 {
 "pic":"lib/images/p219.png",
@@ -41,6 +41,6 @@
 "w1":"lib/images/wclsu.png",
 "hcp":"CP 1142 - 1215",
 "sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Grass.png","b3":"lib/images/Ice.png","b4":"lib/images/Dragon.png","b5":"lib/images/Dark.png","b6":"lib/images/Normal.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Poison.png","g1":"lib/images/Fire.png","g2":"lib/images/Fighting.png","g3":"lib/images/Ground.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾帕路翁","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+"b1":"lib/images/Normal.png","b2":"lib/images/Ice.png","b3":"lib/images/Fairy.png","b4":"lib/images/Bug.png","b5":"lib/images/Poison.png","b6":"lib/images/Flying.png","b7":"lib/images/Fire.png","b8":"","b9":"","g1":"lib/images/Water.png","g2":"lib/images/Ground.png","g3":"lib/images/Rock.png","g4":"lib/images/Fighting.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"熔岩蝸牛","bu11":"lib/images/p99.png","bu12":"巨鉗蟹","bu13":"lib/images/Water.png","bu14":"泡沫","bu15":"lib/images/Water.png","bu16":"蟹鉗錘","bu21":"lib/images/p645.png","bu22":"土地雲(Therian)","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p382.png","bu32":"蓋歐卡","bu33":"lib/images/Water.png","bu34":"攀瀑","bu35":"lib/images/Water.png","bu36":"水炮"
 }
 ]
