--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
 [
 {
+"pic":"lib/images/p5.png",
+"ty0":"lib/images/mfire.png",
+"ty1":"",
+"ncp":"CP 887 - 944",
+"w0":"lib/images/wsun.png",
+"w1":"",
+"hcp":"CP 1109 - 1180",
+"sh":"",
+"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"火恐龍","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
+},
+{
+"pic":"lib/images/p22.png",
+"ty0":"lib/images/mnormal.png",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1077 - 1141",
+"w0":"lib/images/wclsu.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1347 - 1426",
+"sh":"",
+"b1":"lib/images/Grass.png","b2":"lib/images/Bug.png","b3":"lib/images/Ghost.png","b4":"lib/images/Ground.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴雀","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
+},
+{
 "pic":"lib/images/p103.png",
 "ty0":"lib/images/mgrass.png",
-"ty1":"lib/images/mpsychic.png",
+"ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
 "w0":"lib/images/wsun.png",
 "w1":"lib/images/wwindy.png",
 "hcp":"CP 2055 - 2153",
-"sh":"",
-"b1":"lib/images/Fighting.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"lib/images/Psychic.png","b6":"lib/images/Ground.png","b7":"","b8":"","b9":"","g1":"lib/images/Bug.png","g2":"lib/images/Fire.png","g3":"lib/images/Ice.png","g4":"lib/images/Flying.png","g5":"lib/images/Poison.png","g6":"lib/images/Dark.png","g7":"lib/images/Ghost.png","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p637.png","bu12":"火神蛾","bu13":"lib/images/Bug.png","bu14":"蟲咬","bu15":"lib/images/Bug.png","bu16":"蟲鳴","bu21":"lib/images/p649.png","bu22":"蓋諾賽克特(Burn)","bu23":"lib/images/Bug.png","bu24":"連斬","bu25":"lib/images/Bug.png","bu26":"十字剪","bu31":"lib/images/p649.png","bu32":"蓋諾賽克特","bu33":"lib/images/Bug.png","bu34":"連斬","bu35":"lib/images/Bug.png","bu36":"十字剪"
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
-"pic":"lib/images/p159.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"",
-"ncp":"CP 925 - 984",
-"w0":"lib/images/wrain.png",
-"w1":"",
-"hcp":"CP 1157 - 1230",
+"pic":"lib/images/p277.png",
+"ty0":"lib/images/mnormal.png",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1034 - 1097",
+"w0":"lib/images/wclsu.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1293 - 1371",
 "sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Water.png","b3":"lib/images/Ice.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"藍鱷","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Psychic.png","bu24":"意念頭錘","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Electric.png","bu36":"電磁炮"
-},
-{
-"pic":"lib/images/p259.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mground.png",
-"ncp":"CP 955 - 1015",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsun.png",
-"hcp":"CP 1194 - 1269",
-"sh":"",
-"b1":"lib/images/Electric.png","b2":"lib/images/Steel.png","b3":"lib/images/Rock.png","b4":"lib/images/Poison.png","b5":"lib/images/Fire.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"沼躍魚","bu11":"lib/images/p407.png","bu12":"羅絲雷朵","bu13":"lib/images/Grass.png","bu14":"飛葉快刀","bu15":"lib/images/Grass.png","bu16":"日光束","bu21":"lib/images/p407.png","bu22":"羅絲雷朵","bu23":"lib/images/Grass.png","bu24":"飛葉快刀","bu25":"lib/images/Grass.png","bu26":"打草結","bu31":"lib/images/p254.png","bu32":"蜥蜴王","bu33":"lib/images/Grass.png","bu34":"種子機關槍","bu35":"lib/images/Grass.png","bu36":"瘋狂植物"
+"b1":"lib/images/Grass.png","b2":"lib/images/Bug.png","b3":"lib/images/Ghost.png","b4":"lib/images/Ground.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大王燕","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
 },
 {
 "pic":"lib/images/p303.png",
@@ -42,27 +53,5 @@
 "hcp":"CP 1096 - 1167",
 "sh":"lib/images/sh1.png",
 "b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
-},
-{
-"pic":"lib/images/p326.png",
-"ty0":"lib/images/mpsychic.png",
-"ty1":"",
-"ncp":"CP 1285 - 1354",
-"w0":"lib/images/wwindy.png",
-"w1":"",
-"hcp":"CP 1606 - 1692",
-"sh":"",
-"b1":"lib/images/Fighting.png","b2":"lib/images/Psychic.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Bug.png","g2":"lib/images/Dark.png","g3":"lib/images/Ghost.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"噗噗豬","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p609.png","bu32":"水晶燈火靈","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
-},
-{
-"pic":"lib/images/p388.png",
-"ty0":"lib/images/mgrass.png",
-"ty1":"",
-"ncp":"CP 1018 - 1080",
-"w0":"lib/images/wsun.png",
-"w1":"",
-"hcp":"CP 1273 - 1350",
-"sh":"",
-"b1":"lib/images/Water.png","b2":"lib/images/Grass.png","b3":"lib/images/Electric.png","b4":"lib/images/Ground.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fire.png","g2":"lib/images/Flying.png","g3":"lib/images/Poison.png","g4":"lib/images/Bug.png","g5":"lib/images/Ice.png","g6":"","g7":"","g8":"","g9":"","n":"樹林龜","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p637.png","bu22":"火神蛾","bu23":"lib/images/Bug.png","bu24":"蟲咬","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p609.png","bu32":"水晶燈火靈","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 }
 ]
