--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 "b1":"lib/images/Grass.png","b2":"lib/images/Bug.png","b3":"lib/images/Ghost.png","b4":"lib/images/Ground.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴雀","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
 },
 {
-"pic":"lib/images/p103.png",
+"pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
