--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 [
 {
-"pic":"lib/images/p26.png",
-"ty0":"lib/images/melectric.png",
+"pic":"lib/images/p5.png",
+"ty0":"lib/images/mfire.png",
 "ty1":"",
-"ncp":"CP 1180 - 1247",
-"w0":"lib/images/wrain.png",
+"ncp":"CP 887 - 944",
+"w0":"lib/images/wsun.png",
 "w1":"",
-"hcp":"CP 1476 - 1558",
+"hcp":"CP 1109 - 1180",
 "sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Electric.png","b3":"lib/images/Flying.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"雷丘","bu11":"lib/images/p645.png","bu12":"土地雲","bu13":"lib/images/Ground.png","bu14":"泥巴射擊","bu15":"lib/images/Ground.png","bu16":"大地之力","bu21":"lib/images/p645.png","bu22":"土地雲","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p383.png","bu32":"固拉多","bu33":"lib/images/Ground.png","bu34":"泥巴射擊","bu35":"lib/images/Ground.png","bu36":"地震"
+"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"火恐龍","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
 },
 {
-"pic":"lib/images/p87.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1071 - 1134",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1339 - 1418",
-"sh":"",
-"b1":"lib/images/Water.png","b2":"lib/images/Ice.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"白海獅","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
-},
-{
-"pic":"lib/images/p91.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1383 - 1455",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1729 - 1819",
-"sh":"",
-"b1":"lib/images/Water.png","b2":"lib/images/Ice.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"刺甲貝","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
-},
-{
-"pic":"lib/images/p234.png",
+"pic":"lib/images/p22.png",
 "ty0":"lib/images/mnormal.png",
-"ty1":"",
-"ncp":"CP 1170 - 1236",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1077 - 1141",
 "w0":"lib/images/wclsu.png",
-"w1":"",
-"hcp":"CP 1463 - 1546",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1347 - 1426",
 "sh":"",
-"b1":"lib/images/Ghost.png","b2":"","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"驚角鹿","bu11":"lib/images/p534.png","bu12":"修建老匠","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p286.png","bu22":"斗笠菇","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p68.png","bu32":"怪力","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
+"b1":"lib/images/Grass.png","b2":"lib/images/Bug.png","b3":"lib/images/Ghost.png","b4":"lib/images/Ground.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴雀","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
+},
+{
+"pic":"lib/images/p103.png",
+"ty0":"lib/images/mgrass.png",
+"ty1":"lib/images/mdragon.png",
+"ncp":"CP 1643 - 1722",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 2055 - 2153",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
+},
+{
+"pic":"lib/images/p277.png",
+"ty0":"lib/images/mnormal.png",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1034 - 1097",
+"w0":"lib/images/wclsu.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1293 - 1371",
+"sh":"",
+"b1":"lib/images/Grass.png","b2":"lib/images/Bug.png","b3":"lib/images/Ghost.png","b4":"lib/images/Ground.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大王燕","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
 },
 {
 "pic":"lib/images/p303.png",
